<resources>
    <string name="app_name">Focus</string>


    <!--activity + 字段名称-->
    <string name="authorization_1">权限1</string>
    <string name="authorization_desc_1">描述1</string>
    <string name="authorization_2">权限2</string>
    <string name="authorization_desc_2">描述2</string>
    <string name="authorization_3">权限3</string>
    <string name="authorization_desc_3">描述3</string>
    <string name="authorization_4">权限4</string>
    <string name="authorization_desc_4">描述4</string>
    <string name="btn_next">next</string>
    
    <string name="home_task_title">Task %s</string>
    <string name="home_start_time">Start Time : %s</string>
    <string name="home_ended_time">Ended Time : %s</string>
    <string name="add_task_task_title">Task Title</string>
    <string name="add_task_task_start_time">Start Time</string>
    <string name="add_task_task_end_time">End Time</string>
    <string name="add_task_task_address">Address</string>
    <string name="add_task_task_white_list">White List</string>
    <string name="label_add_task">AddTask</string>
    <string name="label_task">History Tasks</string>

</resources>
