<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="64dp"
    tools:context=".AuthorizationManagementActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/authorization_1"
                android:textColor="@color/text_color_primary" />

            <TextView
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_secondary"
                android:text="@string/authorization_desc_1"/>
        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <androidx.legacy.widget.Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_auz_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_primary"
            android:text="@string/authorization_2"/>

        <TextView
            android:id="@+id/txt_auz_desc"
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_auz_title"
            android:textColor="@color/text_color_secondary"
            android:text="@string/authorization_desc_2"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_auz_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color_primary"
            android:text="@string/authorization_3"/>

        <TextView
            android:id="@+id/txt_auz_desc"
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_auz_title"
            android:textColor="@color/text_color_secondary"
            android:text="@string/authorization_desc_3"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
    <androidx.legacy.widget.Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_auz_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authorization_4"
            android:textColor="@color/text_color_primary" />

        <TextView
            android:id="@+id/txt_auz_desc"
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_auz_title"
            android:textColor="@color/text_color_secondary"
            android:text="@string/authorization_desc_4"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</LinearLayout>