<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/txt_task_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_task_title"
        android:textColor="@color/text_color_primary" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/txt_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_start_time"
        android:textColor="@color/text_color_secondary" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/txt_ended_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_ended_time"
        android:textColor="@color/text_color_secondary" />


</LinearLayout>
